--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -1,9 +1,10 @@
-movie.duplicate=Questo film esiste già
+movie.duplicate=Questo film esiste giï¿½
+review.duplicate=Non puoi creare piu recensioni per un film
 NotBlank=Campo obbligatorio
 NotNull=Campo obbligatorio
 Min.year=Deve essere un numero maggiore di 1900
 Max.year=Deve essere un numero minore di 2023
-NotBlank.movie.title=Il titolo è un campo obbligatorio
+NotBlank.movie.title=Il titolo ï¿½ un campo obbligatorio
 NotBlank.movie.year=Campo obbligatorio
 typeMismatch.java.lang.Integer=Deve essere un numero
 typeMismatch=Formato non valido
