Finita form aggiungi artista

--- a/src/main/resources/messages/messages_EN.properties
+++ b/src/main/resources/messages/messages_EN.properties
@@ -1,4 +1,5 @@
-movie.duplicate=This movie exists
+movie.duplicate=This movie already exists
+artist.duplicate=This artist already exists
 review.duplicate=You cannot create more than one review per movie
 NotBlank=Mandatory field
 NotNull=Mandatory field
